--- a/Project/src/main/resources/templates/signin.html
+++ b/Project/src/main/resources/templates/signin.html
@@ -25,19 +25,19 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fas fa-user"></i></span>
                             </div>
-                            <input type="text" class="form-control" placeholder="Korisničko ime">
+                            <input type="text" id="user" class="form-control" placeholder="Korisničko ime">
                         </div>
                         <div class="input-group form-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fas fa-key"></i></span>
                             </div>
-                            <input type="password" class="form-control" placeholder="Lozinka">
+                            <input type="password" id="pass" class="form-control" placeholder="Lozinka">
                         </div>
                         <div class="row align-items-center remember">
-                            <input type="checkbox">Zapamti me
+                            <input id="rememberMe" type="checkbox">Zapamti me
                         </div>
                         <div class="form-group">
-                            <input type="submit" value="Prijavi se" class="btn float-right login-btn">
+                            <input type="button" value="Prijavi se" class="btn float-right login-btn" onclick="login()">
                         </div>
                     </form>
                 </div>
