--- a/Project/src/main/resources/templates/signup.html
+++ b/Project/src/main/resources/templates/signup.html
@@ -7,8 +7,7 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.css" rel="stylesheet" id="bootstrap-css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/css/signup.css">
-    <script src="functions.js"></script>
-    <script src="/js/functions.js" type="text/javascript"></script>
+    <script type="text/javascript" src="/js/functions.js"></script>
 </head>
 
 <body>
@@ -38,12 +37,12 @@
                             </div>
                             <input type="email" class="form-control" id="email" placeholder="Email">
                         </div>
-                        <div class="input-group form-group">
+                        <!----   <div class="input-group form-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fas fa-mobile"></i></span>
                             </div>
                             <input type="tel" class="form-control" id="mobile" placeholder="Broj telefona" pattern="[0-9]{10}">
-                        </div>
+                        </div>---->
                         <div class="input-group form-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fas fa-key"></i></span>
@@ -58,16 +57,16 @@
                         </div>
                         <div class="form-check">
                             <label class="form-check-label">
-                                    <input type="radio" class="form-check-input" name="uloga" value="poslodavac">Želim da postavljam oglase
+                                    <input type="radio" class="form-check-input" id="poslodavac" name="uloga" value="poslodavac">Želim da postavljam oglase
                                 </label>
                         </div>
                         <div class="form-check">
                             <label class="form-check-label">
-                                    <input type="radio" class="form-check-input" name="uloga" value="radnik">Želim da nađem posao
+                                    <input type="radio" class="form-check-input" name="uloga" value="radnik" checked>Želim da nađem posao
                                 </label>
                         </div>
                         <div class="form-group">
-                            <input type="submit" value="Prijavi se" class="btn float-right register-btn" onclick="addUser()">
+                            <input type="button" value="Prijavi se" class="btn float-right register-btn" onclick="signup()">
                         </div>
                     </form>
                 </div>
