--- a/Project/src/main/resources/templates/main.html
+++ b/Project/src/main/resources/templates/main.html
@@ -31,10 +31,10 @@ and open the template in the editor.
                             <a class='nav-link' href='#'>Features</a>
                         </li>
                         <li class='nav-item pl-1'>
-                            <a class='nav-link' href='signin.html'><i class='fa fa-user-plus fa-fw mr-1'></i>Registruj se</a>
+                            <a class='nav-link' href='http://localhost:8080/signup'><i class='fa fa-user-plus fa-fw mr-1'></i>Registruj se</a>
                         </li>
                         <li class='nav-item pl-1'>
-                            <a class='nav-link' href='login.html'><i class='fas fa-sign-in-alt fa-fw mr-1'></i>Prijavi se</a>
+                            <a class='nav-link' href='http://localhost:8080/signin'><i class='fas fa-sign-in-alt fa-fw mr-1'></i>Prijavi se</a>
                         </li>
                     </ul>
                 </div>
