--- a/Project/src/main/resources/static/css/style.css
+++ b/Project/src/main/resources/static/css/style.css
@@ -11108,3 +11108,132 @@ html {
     border: solid 2px #2c3e50;
     font-family: var(--bs-font-sans-serif);
 }
+
+/* LOGIN CSS*/
+.login-box {
+    position: relative;
+    margin-top: 150px;
+    height: auto;
+    background: #2c3e50;
+    text-align: center;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    border-radius: 20px;
+}
+
+.login-user {
+    position: relative;
+    margin-top: 50px;
+    height: 100px;
+    font-size: 80px;
+    line-height: 100px;
+    background: -webkit-linear-gradient(#27EF9F, #0DB8DE);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+ /*.login-title {
+    margin-top: 15px;
+    text-align: center;
+    font-size: 30px;
+    letter-spacing: 2px;
+    margin-top: 15px;
+    font-weight: bold;
+    color: #ECF0F5;
+}*/
+
+.login-form {
+    margin-top: 30px;
+    text-align: left;
+}
+
+.form-group input[type=text], .form-group input[type=email] {
+    background-color:  white;
+    border: none;
+    border: 3px solid #0DB8DE;
+    border-radius: 0px;
+    font-weight: bold;
+    outline: 0;
+    margin-bottom: 5px;
+    padding-left: 0px;
+    color: #0DB8DE;
+}
+.form-group input[type=password] {
+    background-color: white;
+    border: none;
+    border: 3px solid #0DB8DE;
+    border-radius: 0px;
+    font-weight: bold;
+    outline: 0;
+    padding-left: 0px;
+    margin-bottom: 5px;
+    color: #0DB8DE;
+}
+
+.form-group {
+    margin-bottom: 40px;
+    outline: 0px;
+}
+
+.form-group:focus {
+    border-color: inherit;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    border-bottom: 2px solid #0DB8DE;
+    outline: 0;
+    color: #ECF0F5;
+
+}
+
+input:focus {
+    outline: none;
+    color: black;
+    box-shadow: 0 0 0;
+}
+
+label {
+    margin-bottom: 0px;
+}
+
+.form-control-label, .form-group p {
+    font-size: 15px;
+    color: white;
+    font-weight: bold;
+    letter-spacing: 1px;
+}
+
+.btn-outline-primary {
+    border-color: #0DB8DE;
+    color: #0DB8DE;
+    border-radius: 0px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    border-radius: 10px;
+}
+
+.btn-outline-primary:hover {
+    background-color: #15967d;
+    right: 0px;
+}
+
+.login-btm {
+    float: left;
+
+}
+
+.login-button {
+    padding-right: 0px;
+    text-align: right;
+    margin-bottom: 25px;
+}
+
+.login-text {
+    text-align: left;
+    padding-left: 0px;
+    color: #A2A4A4;
+}
+
+.loginbttm {
+    padding: 0px;
+
+}
