--- a/Project/src/main/resources/templates/signin.html
+++ b/Project/src/main/resources/templates/signin.html
@@ -1,57 +1,71 @@
-<!DOCTYPE html>
 <html>
 
 <head>
-    <title>Lako do posla</title>
+    <title>Lako do posla - Prijavi se</title>
     <meta charset="UTF-8">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/css/signin.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <script src="/js/functions.js" type="text/javascript"></script>
 </head>
 
 <body>
     <div class="container">
-        <div class="d-flex justify-content-center h-100">
-            <div class="card">
-                <div class="card-header">
-                    <h3>Prijavite se</h3>
-                </div>
-                <div class="card-body">
-                    <form>
-                        <div class="input-group form-group">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text"><i class="fas fa-user"></i></span>
-                            </div>
-                            <input type="text" id="user" class="form-control" placeholder="Korisničko ime">
-                        </div>
-                        <div class="input-group form-group">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text"><i class="fas fa-key"></i></span>
-                            </div>
-                            <input type="password" id="pass" class="form-control" placeholder="Lozinka">
-                        </div>
-                        <div class="row align-items-center remember">
-                            <input id="rememberMe" type="checkbox">Zapamti me
-                        </div>
-                        <div class="form-group">
-                            <input type="button" value="Prijavi se" class="btn float-right login-btn" onclick="login()">
-                        </div>
-                    </form>
-                </div>
-                <div class="card-footer">
-                    <div class="d-flex justify-content-center links">
-                        Nemate nalog?<a href="#">Prijavite se</a>
-                    </div>
-                    <div class="d-flex justify-content-center">
-                        <a href="#">Zaboravili ste šifru?</a>
-                    </div>
+        <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+            <div class="container">
+                <a class="navbar-brand" href="#page-top">Lako do posla</a>
+                <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                Menu
+                <i class="fas fa-bars"></i>
+            </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/">Početna</a></li>
+                    </ul>
                 </div>
             </div>
+        </nav>
+        <div class="row">
+            <div class="col-lg-3 col-md-2"></div>
+            <div class="col-lg-6 col-md-8 login-box" style="margin-top: 140px;">
+                <div class="col-lg-12 login-user">
+                    <i class="far fa-user" aria-hidden="true"></i>
+                </div>
+                <div class="col-lg-12 login-title">
+                    PRIJAVI SE
+                </div>
+
+                <div class="col-lg-12 login-form">
+                    <div class="col-lg-12 login-form">
+                        <form>
+                            <div class="form-group">
+                                <label class="form-control-label">Korisničko ime</label>
+                                <input id="user" type="text" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label class="form-control-label">Lozinka</label>
+                                <input id="pass" type="password" class="form-control">
+                                <p>
+                                    Nemate nalog? <a class="nav-item mx-0 mx-lg-1" href="http://localhost:8080/signup">Registrujte se</a>
+                                </p>
+                            </div>
+
+                            <div class="col-lg-12 loginbttm">
+                                <div class="col-lg-6 login-btm login-text">
+                                    <!-- Error Message -->
+                                </div>
+                                <div class="col-lg-6 login-btm login-button">
+                                    <button class="btn btn-outline-primary" onclick="login()">Prijavi se</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-2"></div>
+            </div>
         </div>
-    </div>
 </body>
 
 </html>
