--- a/Project/src/main/resources/templates/signin.html
+++ b/Project/src/main/resources/templates/signin.html
@@ -29,7 +29,7 @@
         </nav>
         <div class="row">
             <div class="col-lg-3 col-md-2"></div>
-            <div class="col-lg-6 col-md-8 login-box" style="margin-top: 140px;">
+            <div class="col-lg-6 col-md-8 login-box">
                 <div class="col-lg-12 login-user">
                     <i class="far fa-user" aria-hidden="true"></i>
                 </div>
