--- a/Project/src/main/resources/templates/signin.html
+++ b/Project/src/main/resources/templates/signin.html
@@ -11,20 +11,20 @@
     <script src="/js/functions.js" type="text/javascript"></script>
 </head>
 
-<body>
+<body class="ostaleStrane">
     <div class="container">
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top">Lako do posla</a>
+                <a class="navbar-brand" href="http://localhost:8080/">Lako do posla</a>
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
             </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/">Početna</a></li>
-                    </ul>
-                </div>
+                <!-- <div class="collapse navbar-collapse" id="navbarResponsive">
+                     <ul class="navbar-nav ms-auto">
+                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/">Početna</a></li>
+                     </ul>
+                 </div> -->
             </div>
         </nav>
         <div class="row">
@@ -47,11 +47,14 @@
                             <div class="form-group">
                                 <label class="form-control-label">Lozinka</label>
                                 <input id="pass" type="password" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <input type="checkbox" id="remember-me" checked>
+                                <label class="form-control-label" for="remember-me">Zapamti me</label>
                                 <p>
                                     Nemate nalog? <a class="nav-item mx-0 mx-lg-1" href="http://localhost:8080/signup">Registrujte se</a>
                                 </p>
                             </div>
-
                             <div class="col-lg-12 loginbttm">
                                 <div class="col-lg-6 login-btm login-text">
                                     <!-- Error Message -->
@@ -66,6 +69,7 @@
                 <div class="col-lg-3 col-md-2"></div>
             </div>
         </div>
+    </div>
 </body>
 
 </html>
