--- a/Project/src/main/resources/templates/signup.html
+++ b/Project/src/main/resources/templates/signup.html
@@ -11,20 +11,20 @@
     <script src="/js/functions.js" type="text/javascript"></script>
 </head>
 
-<body>
+<body onload="Dajgradove()" class="ostaleStrane">
     <div class="container">
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top">Lako do posla</a>
+                <a class="navbar-brand" href="http://localhost:8080/">Lako do posla</a>
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
             </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
+                <!-- <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/">Početna</a></li>
                     </ul>
-                </div>
+                </div> -->
             </div>
         </nav>
         <div class="row">
@@ -52,7 +52,7 @@
                             </div>
                             <div class="form-group">
                                 <label class="form-control-label">Mesto boravka</label>
-                                <input type="text" id="city-register" class="form-control" data-sb-validations="required">
+                                <select id="city-register" class="form-control" data-sb-validations="required"></select>
                                 <div class="invalid-feedback" data-sb-feedback="city-register:required">Neophodno je da unesete mesto boravka!</div>
                             </div>
                             <div class="form-group">
@@ -73,7 +73,11 @@
                             <div class="form-group">
                                 <label class="form-control-label">Lozinka</label>
                                 <input type="password" id="password-register" class="form-control" data-sb-validations="required">
-                                <div class="invalid-feedback" data-sb-feedback="password-register:required">Neophodno je da unesete korisničko ime!</div>
+                                <div class="invalid-feedback" data-sb-feedback="password-register:required">Neophodno je da unesete lozinku!</div>
+                            </div>
+                            <div class="form-group">
+                                <input type="checkbox" id="remember-me" checked>
+                                <label class="form-control-label" for="remember-me">Zapamti me</label>
                             </div>
                             <div class="col-lg-12 loginbttm">
                                 <div class="col-lg-6 login-btm login-text">
