dosta je sredjeno

--- a/Project/src/main/resources/templates/signin.html
+++ b/Project/src/main/resources/templates/signin.html
@@ -60,7 +60,7 @@
                                     <!-- Error Message -->
                                 </div>
                                 <div class="col-lg-6 login-btm login-button">
-                                    <button class="btn btn-outline-primary" onclick="login()">Prijavi se</button>
+                                    <button type="button" class="btn btn-outline-primary" onclick="login()">Prijavi se</button>
                                 </div>
                             </div>
                         </form>
