--- a/Project/src/main/resources/templates/signup.html
+++ b/Project/src/main/resources/templates/signup.html
@@ -41,13 +41,13 @@
                     <div class="col-lg-12 login-form">
                         <form>
                             <div class="form-group">
-                                <label class="form-control-label">Ime</label>
+                                <label class="form-control-label">Ime i Prezime</label>
                                 <input type="text" id="name-register" class="form-control" data-sb-validations="required">
                                 <div class="invalid-feedback" data-sb-feedback="name-register:required" style="color: white">Neophodno je da unesete ime!</div>
                             </div>
                             <div class="form-group">
-                                <label class="form-control-label">Prezime</label>
-                                <input type="text" id="surname-register" class="form-control" data-sb-validations="required">
+                                <label class="form-control-label">Korisnicko ime</label>
+                                <input type="text" id="username-register" class="form-control" data-sb-validations="required">
                                 <div class="invalid-feedback" data-sb-feedback="surname-register:required">Neophodno je da unesete prezime!</div>
                             </div>
                             <div class="form-group">
@@ -66,25 +66,37 @@
                                 <div class="invalid-feedback" data-sb-feedback="tel-register:required">Neophodno je da unesete broj telefona!</div>
                             </div>
                             <div class="form-group">
-                                <label class="form-control-label">Korisničko ime</label>
-                                <input type="text" id="username-register" class="form-control" data-sb-validations="required">
-                                <div class="invalid-feedback" data-sb-feedback="username-register:required">Neophodno je da unesete korisničko ime!</div>
+                                <label class="form-control-label">Lozinka</label>
+                                <input type="text" id="password-register" class="form-control" data-sb-validations="required">
+                                <div class="invalid-feedback" data-sb-feedback="password-register:required">Neophodno je da unesete korisničko ime!</div>
                             </div>
                             <div class="form-group">
-                                <label class="form-control-label">Lozinka</label>
-                                <input type="password" id="password-register" class="form-control" data-sb-validations="required">
-                                <div class="invalid-feedback" data-sb-feedback="password-register:required">Neophodno je da unesete lozinku!</div>
+                                <label class="form-control-label">Potvrdite lozinku</label>
+                                <input type="password" id="ppassword-register" class="form-control" data-sb-validations="required">
+                                <div class="invalid-feedback" data-sb-feedback="ppassword-register:required">Neophodno je da unesete lozinku!</div>
                             </div>
+                            <div class="form-check">
+                                <label class="form-check-label">
+                                    <input type="radio" class="form-check-input" id="poslodavac" name="uloga" value="poslodavac">
+                                        Želim da postavljam oglase
+                                    </label>
+                            </div>
+                            <div class="form-check">
+                                <label class="form-check-label">
+                                        <input type="radio" class="form-check-input" name="uloga" value="radnik" checked>Želim da nađem posao
+                                    </label>
+                            </div>
+                            <!--
                             <div class="form-group">
                                 <input type="checkbox" id="remember-me" checked>
                                 <label class="form-control-label" for="remember-me">Zapamti me</label>
-                            </div>
+                            </div>-->
                             <div class="col-lg-12 loginbttm">
                                 <div class="col-lg-6 login-btm login-text">
                                     <!-- Error Message -->
                                 </div>
                                 <div class="col-lg-6 login-btm login-button">
-                                    <button type="submit" class="btn btn-outline-primary">Registruj se</button>
+                                    <button type="button" class="btn btn-outline-primary" onclick="signup()">Registruj se</button>
                                 </div>
                             </div>
                         </form>
